@@ -1,0 +1,1 @@
+#empty== You don't have any opportunities yet. Feel free to #{link_to_remote("create a new opportunity", :url => new_opportunity_path, :loading => "$('empty').hide()")}.
