@@ -7,6 +7,7 @@ if @opportunity.valid?
   page[dom_id(@opportunity)].visual_effect :highlight, :duration => 1.5
   if called_from_index_page?
     page << refresh_sidebar(:index, :filters)
+    page[:paginate].replace_html render(:partial => "common/ajax_paginate")
   else
     page[:recently].replace :partial => "common/recently"
   end
