@@ -8,4 +8,5 @@
   - unless @opportunities.empty?
     = render :partial => "opportunity", :collection => @opportunities
   - else
-    %div== You don't have any opportunities yet. Feel free to #{link_to_remote("create new opportunity", :url => new_opportunity_path)}.
+    = render :partial => "empty"
+#paginate= render :partial => "common/ajax_paginate"
