@@ -1,0 +1,6 @@
+unless @opportunities.blank?
+  page[:opportunities].replace_html render(:partial => "opportunity", :collection => @opportunities)
+else
+  page[:opportunities].replace_html render(:partial => "empty")
+end
+page[:paginate].replace_html render(:partial => "common/ajax_paginate")
