@@ -4,7 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
-Fri, May 1, 2009
+Sun, May 3, 2009
+---------------------------------------------------------------------
+- Implemented Ajax pagination for Opportunities.
+
+Sat, May 2, 2009
 ---------------------------------------------------------------------
 - Implemented Ajax pagination for Contacts.
 
